--- a/style.css
+++ b/style.css
@@ -2,4 +2,66 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+    font-family: 'Hachi Maru Pop', cursive;
+}
+
+body {
+    background: url('./assets/background-burgerpro.png') no-repeat center/cover;
+    min-height: 100vh;
+}
+
+.container-buttons {
+    margin: 30px 0;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 20px;
+}
+
+button {
+    background-color: #ff7e06;
+    border: none;
+    border-radius: 5px;
+    color: #000000;
+    padding: 10px;
+    cursor: pointer;
+    transition: transform 0.3s;
+    width: 110px;
+    text-transform: uppercase;
+}
+
+button:hover {
+    background-color:#8133ff;
+    transform: scale(1.1);
+}
+
+ul {
+    list-style: none;
+    display: grid;
+    grid-template-columns: 200px 200px 200px;
+    gap: 20px;
+    justify-content: center;
+}
+
+li {
+    background-color: #000000;
+    border: 2px solid transparent;
+    border-image: linear-gradient(90deg, rgba(129, 51, 255, 1) 0%, rgba(255, 126, 6, 1) 100%);
+    border-image-slice: 1;
+    border-radius: 5px;
+    padding: 5px;
+}
+
+img {
+    width: 100%;
+    border-radius: 5px;
+}
+
+p {
+    color: #ff7e06;
+}
+
+.hamburguer-price {
+    font-weight: bold;
+    color: #8133ff;
 }
