--- a/style.css
+++ b/style.css
@@ -16,7 +16,7 @@ header {
     align-items: center;
     flex-direction: column;
     background-color: #000000e0;
-    padding: 20px;
+    padding-bottom: 20px;
 }
 
 header p {
